--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1048,6 +1048,11 @@
               <FileType>5</FileType>
               <FilePath>.\src\Device\Device.h</FilePath>
             </File>
+            <File>
+              <FileName>ChanB.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\ChanB.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2288,6 +2293,11 @@
               <FileName>Device.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Device\Device.h</FilePath>
+            </File>
+            <File>
+              <FileName>ChanB.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\ChanB.cpp</FilePath>
             </File>
           </Files>
         </Group>
