--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1053,6 +1053,11 @@
               <FileType>8</FileType>
               <FilePath>.\src\Device\ChanB.cpp</FilePath>
             </File>
+            <File>
+              <FileName>ChanS.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\ChanS.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2298,6 +2303,11 @@
               <FileName>ChanB.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Device\ChanB.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ChanS.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\ChanS.cpp</FilePath>
             </File>
           </Files>
         </Group>
